Fix 222 Richmond St.

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         </div>
                     </div>
                     <div class="mbr-section__container">
-                        <div class="mbr-article mbr-article--auto-align mbr-article--wysiwyg"><p>There are limited spots available to be a participant of Brown Hack Health 2016,&nbsp;Friday to Sunday&nbsp;September 16-18, 2016. You must apply via the link on the left to be eligible to participate from all disciplines, which is free. You will be guided to form multidisciplinary teams on the Saturday of the event. Deadline to apply until is September 12, 2016.<br><br>Brown University Warren Alpert Medical School, <br>222 Richmond Ave, Providence 02912<br><br>Feel free to address any questions by emailing us at <strong>brownhackhealth@gmail.com</strong>.</p></div>
+                        <div class="mbr-article mbr-article--auto-align mbr-article--wysiwyg"><p>There are limited spots available to be a participant of Brown Hack Health 2016,&nbsp;Friday to Sunday&nbsp;September 16-18, 2016. You must apply via the link on the left to be eligible to participate from all disciplines, which is free. You will be guided to form multidisciplinary teams on the Saturday of the event. Deadline to apply until is September 12, 2016.<br><br>Brown University Warren Alpert Medical School, <br>222 Richmond St., Providence 02912<br><br>Feel free to address any questions by emailing us at <strong>brownhackhealth@gmail.com</strong>.</p></div>
                     </div>
                 </div>
                 <div class="mbr-box__magnet mbr-box__magnet--top-left mbr-section__right col-sm-4">
