--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">website building software</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header2-16" style="background-image: url(assets/images/20160421-comm-alpertopioid001-1200x800-61.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">bootstrap layout builder</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header2-16" style="background-image: url(assets/images/20160421-comm-alpertopioid001-1200x800-61.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-left mbr-after-navbar">
         <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(85, 57, 130);"></div>
         <div class="mbr-box__container mbr-section__container container">
@@ -235,14 +235,14 @@
             <div class="modal-content">
                 <div class="modal-body">
                     <ol class="carousel-indicators">
-                        <li data-app-prevent-settings="" data-target="#lb-gallery1-11" data-slide-to="0"></li><li data-app-prevent-settings="" data-target="#lb-gallery1-11" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#lb-gallery1-11" class=" active" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#lb-gallery1-11" data-slide-to="3"></li><li data-app-prevent-settings="" data-target="#lb-gallery1-11" data-slide-to="4"></li><li data-app-prevent-settings="" data-target="#lb-gallery1-11" data-slide-to="5"></li><li data-app-prevent-settings="" data-target="#lb-gallery1-11" data-slide-to="6"></li>
+                        <li data-app-prevent-settings="" data-target="#lb-gallery1-11" data-slide-to="0"></li><li data-app-prevent-settings="" data-target="#lb-gallery1-11" class=" active" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#lb-gallery1-11" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#lb-gallery1-11" data-slide-to="3"></li><li data-app-prevent-settings="" data-target="#lb-gallery1-11" data-slide-to="4"></li><li data-app-prevent-settings="" data-target="#lb-gallery1-11" data-slide-to="5"></li><li data-app-prevent-settings="" data-target="#lb-gallery1-11" data-slide-to="6"></li>
                     </ol>
                     <div class="carousel-inner">
                         <div class="item">
                             <img alt="" src="assets/images/slide1-720x720-76.png">
-                        </div><div class="item">
-                            <img alt="" src="assets/images/bcbi-2c-centered-k-text-1306x1306-29.jpg">
                         </div><div class="item active">
+                            <img alt="" src="assets/images/bcbi-2c-centered-k-text-1306x1306-29.jpg">
+                        </div><div class="item">
                             <img alt="" src="assets/images/slide2-720x720-13.png">
                         </div><div class="item">
                             <img alt="" src="assets/images/slide2-720x720-86.png">
@@ -283,7 +283,7 @@
                 <div class="mbr-box__magnet mbr-box__magnet--top-left mbr-section__left col-sm-8">
                     
                     <div class="mbr-section__container">
-                        <div class="mbr-article mbr-article--auto-align mbr-article--wysiwyg"><p><strong>Founders:</strong> Elaina Wang, Alex Kaye, Tung Nguyen @ Brown University<br><strong>Partners: </strong>Brown Center for Biomedical Informatics (Director Neil Sarkar, PhD) &amp;<br>Brown Innovation for Health<br></p></div>
+                        <div class="mbr-article mbr-article--auto-align mbr-article--wysiwyg"><p><strong>Founders:</strong> Elaina Wang, Alex Kaye, Tung Nguyen @ Brown University<br><strong>Partners: </strong><a href="https://www.brown.edu/academics/medical/about-us/research/centers-institutes-and-programs/biomedical-informatics/" class="text-danger">Brown Center for Biomedical Informatics</a> (Director Neil Sarkar, PhD) &amp;<br>Brown Innovation for Health<br></p></div>
                     </div>
                 </div>
                 <div class="mbr-box__magnet mbr-box__magnet--top-left mbr-section__right col-sm-4">
