--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">bootstrap layout builder</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header2-16" style="background-image: url(assets/images/20160421-comm-alpertopioid001-1200x800-61.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">best web design software</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header2-16" style="background-image: url(assets/images/20160421-comm-alpertopioid001-1200x800-61.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-left mbr-after-navbar">
         <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(85, 57, 130);"></div>
         <div class="mbr-box__container mbr-section__container container">
@@ -79,7 +79,7 @@
                         </div>
                     </div>
                     <div class="mbr-section__container mbr-section__container--middle">
-                        <div class="mbr-article mbr-article--auto-align mbr-article--wysiwyg"><blockquote><p>John Sculley III, Brown alum ‘61, former CEO of Apple and former President of PepsiCo, (pictured center) will be attending Brown Hack Health 2016 as the keynote speaker. His expertise with, involvement in, and advocacy for technological and now healthcare innovation, especially in telemedicine, provides great direction for tackling the healthcare issues presented at the hackathon.</p><pre>24H EVENT SCHEDULE: TBD</pre></blockquote></div>
+                        <div class="mbr-article mbr-article--auto-align mbr-article--wysiwyg"><blockquote><p>John Sculley III, Brown alum ‘61, former CEO of Apple and former President of PepsiCo, (pictured center) will be attending Brown Hack Health 2016 as the keynote speaker. His expertise with, involvement in, and advocacy for technological and now healthcare innovation, especially in telemedicine, provides great direction for tackling the healthcare issues presented at the hackathon. Some of his work in healthcare technology currently include co-founding&nbsp;<a href="http://misfit.com/?locale=en" class="text-danger">Misfit Wearables</a> and serving as vice-chairman of&nbsp;<a href="https://welcome.mdlive.com/" class="text-danger">MDLive</a>.</p><h3><span style="font-weight: normal;">"We are entering a new era of disruptive innovation, especially in healthcare and wellness services, where consumers will take charge of their own health." JS</span></h3></blockquote></div>
                     </div>
                     
                 </div>
