--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">html website builder</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header2-16" style="background-image: url(assets/images/20160421-comm-alpertopioid001-1200x800-61.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">best free website creator</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header2-16" style="background-image: url(assets/images/20160421-comm-alpertopioid001-1200x800-61.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-left mbr-after-navbar">
         <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(85, 57, 130);"></div>
         <div class="mbr-box__container mbr-section__container container">
@@ -123,7 +123,7 @@
                         </div>
                     </div>
                     <div class="mbr-section__container mbr-section__container--middle">
-                        <div class="mbr-article mbr-article--auto-align mbr-article--wysiwyg"><blockquote><strong>Brown's Alpert Medical School provides access to large, modern spaces in which allow for intense collaborations at the white board, amongst people, and for prototyping. Its location near the Providence healthcare community, including hospitals in Lifespan and Care New England, as well as the Providence Veterans Affairs Medical Center, allows for participants to actively engage in observations and discussions to identify important healthcare needs. This will allow for participants of Brown Hack Health to create Providence's most demanded healthcare solutions!</strong></blockquote></div>
+                        <div class="mbr-article mbr-article--auto-align mbr-article--wysiwyg"><blockquote>Brown's Alpert Medical School provides access to large, modern spaces in which allow for intense collaborations at the white board, amongst people, and for prototyping. Its location near the Providence healthcare community, including hospitals in Lifespan and Care New England, as well as the Providence Veterans Affairs Medical Center, allows for participants to actively engage in observations and discussions to identify important healthcare needs. This will allow for participants of Brown Hack Health to create Providence's most demanded healthcare solutions!</blockquote></div>
                     </div>
                     
                 </div>
