--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="assets/mobirise-gallery/style.css">
   <link rel="stylesheet" href="assets/mobirise-slider/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
-  <meta property="og:image" content="http://brownhackhealth.org/assets/images/logo-blue-8333x1395-44.png"/>
+  <meta property="og:image" content="assets/images/alpertmed-downtown-1-520x336-73.jpg"/>
   
   
 </head>
