--- a/index.html
+++ b/index.html
@@ -242,6 +242,8 @@
                             <img alt="" src="assets/images/slide1-720x720-76.png">
                         </div><div class="item active">
                             <img alt="" src="assets/images/bcbi-2c-centered-k-text-1306x1306-29.jpg">
+                        </div><div class="item active">
+                            <img alt="" src="assets/images/WA.png">
                         </div><div class="item">
                             <img alt="" src="assets/images/slide2-720x720-13.png">
                         </div><div class="item">
