--- a/aboutus.html
+++ b/aboutus.html
@@ -135,7 +135,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-2" style="padding-top: 80px; padding-bottom: 0px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/favicon-copy-600x600-23.png" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/md-600x600-30.jpg" class="card-img-top"></div>
                     <div class="card-block">
                         <h4 class="card-title">Matthew D'Antuono</h4>
                         <h5 class="card-subtitle">Head of Outreach</h5>
@@ -148,7 +148,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-2" style="padding-top: 80px; padding-bottom: 0px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/favicon-copy-600x600-88.png" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/aw-600x600-76.jpg" class="card-img-top"></div>
                     <div class="card-block">
                         <h4 class="card-title">Amanda Way</h4>
                         <h5 class="card-subtitle">Head of Engagement</h5>
@@ -281,7 +281,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-2" style="padding-top: 40px; padding-bottom: 40px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/favicon-copy-600x600-84.png" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/jv-600x600-83.jpg" class="card-img-top"></div>
                     <div class="card-block">
                         <h4 class="card-title">Jon Vu<br></h4>
                         <h5 class="card-subtitle">BMVG</h5>
