--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-blue-211x128-36.png" type="image/x-icon">
   <meta name="description" content="">
+  <meta property="og:image" content="assets/images/logo-blue-211x128-36.png" />
   
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&amp;subset=latin">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
@@ -71,7 +72,7 @@
                 <div class="mbr-section col-md-10 col-md-offset-1 text-xs-center">
 
                     <h1 class="mbr-section-title display-1">Brown Hack Health 2016</h1>
-                    <p class="mbr-section-lead lead"><span style="font-style: normal;">is a <strong>new kind of hackathon</strong> that aims to create solutions to medical problems and barriers. This weekend is your opportunity to work with <strong>fellow designers, engineers, developers, physicians, artists, entrepreneurs, mentors, and others</strong> to help develop tools that could change the worlds of medicine and health.</span><br></p>
+                    <p class="mbr-section-lead lead"><span style="font-style: normal;">A <strong>new kind of hackathon</strong> that aims to create solutions to medical problems and barriers. This weekend is your opportunity to work with <strong>fellow designers, engineers, developers, physicians, artists, entrepreneurs, mentors, and others</strong> to help develop tools that could change the worlds of medicine and health.</span><br></p>
                     <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="https://mobirise.com"><span class="etl-icon icon-hourglass mbr-iconfont mbr-iconfont-btn"></span>Schedule FRI 09.16 - SUN 09.18.16</a> <a class="btn btn-lg btn-black-outline btn-black" href="https://goo.gl/forms/JglaNTNkqyHataaJ3">Register for Participant Waitlist</a></div>
                 </div>
             </div>
