--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
                 <h3 class="mbr-section-title display-2">Providence RI</h3>
-                <div class="lead"><p>is affected by overcrowding emergency departments and overburdened hospital resources. We aim to alleviate this solution by the management of chronic diseases, such as obesity and diabetes, and providing more affordable, continuous care to everyone in Providence, including the uninsured, underinsured, and underserved populations.</p><p><span style="font-size: 1.07rem; line-height: 1.5;">In 24h of developing fast prototypes for healthcare issues, we can make strides to impacting our local Providence community and other communities nationwide.</span><br></p></div>
+                <div class="lead"><p>is affected by overcrowded emergency departments and overburded hospital resources. We propose to alleviate these problems by better management of chronic diseases, such as obesity and diabetes, and providing more affordable, continuous care to everyone in Providence, including the uninsured, underinsured, and underserved populations.</p><p><span style="font-size: 1.07rem; line-height: 1.5;">In 24h of developing fast prototypes for healthcare issues, we can make strides to impacting our local Providence community and other communities nationwide.</span><br></p></div>
                 
             </div>
         </div>
