--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
                 <h3 class="mbr-section-title display-2">Providence RI</h3>
-                <div class="lead"><p>is affected by overcrowded emergency departments and overburded hospital resources. We propose to alleviate these problems by improving the management of chronic diseases, such as obesity and diabetes, and providing more affordable, continuous care to everyone in Providence, including the uninsured, underinsured, and underserved populations.</p><p><span style="font-size: 1.07rem; line-height: 1.5;">In 24h of developing fast prototypes for healthcare issues, we can make strides to impacting our local Providence community and other communities nationwide.</span><br></p></div>
+                <div class="lead"><p>is affected by overcrowded emergency departments and overburded hospital resources. We propose to alleviate these problems by improving the management of chronic diseases, such as obesity and diabetes, and providing more affordable, continuous care to everyone in Providence, including the uninsured, underinsured, and underserved populations.</p><p><span style="font-size: 1.07rem; line-height: 1.5;">In 24h of developing fast prototypes for healthcare issues, we can make strides towards impacting our local Providence community and other communities nationwide.</span><br></p></div>
                 
             </div>
         </div>
@@ -434,6 +434,21 @@
         </div>
     </div>
 </section>
+
+<section class="mbr-section article mbr-section__container" id="content1-0" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead"><p>Brown Hack Health would also like to acknowledge the generous support of our gold sponsors, 
+            the Africk Family Foundation, Inc. and The Center for Nutritional Research Charitable Trust.</p></div>
+        </div>
+    </div>
+
+</section>
+
+
+
+
 
 <section class="mbr-section mbr-section__container" id="header3-0" style="background-color: rgb(40, 50, 78); padding-top: 40px; padding-bottom: 0px;">
     <div class="container">
