--- a/aboutus.html
+++ b/aboutus.html
@@ -122,7 +122,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-2" style="padding-top: 80px; padding-bottom: 0px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/favicon-copy-600x600-82.png" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/Sanj.jpg" class="card-img-top"></div>
                     <div class="card-block">
                         <h4 class="card-title">Sanjana Kalagara</h4>
                         <h5 class="card-subtitle">Head of Operations</h5>
@@ -208,7 +208,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-2" style="padding-top: 40px; padding-bottom: 0px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/favicon-copy-600x600-27.png" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/MaraQuinn.jpg" class="card-img-top"></div>
                     <div class="card-block">
                         <h4 class="card-title">Mara Quinn<br></h4>
                         <h5 class="card-subtitle">Engagement</h5>
@@ -255,7 +255,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-2" style="padding-top: 40px; padding-bottom: 40px;">
             <div class="container">
               <div class="card cart-block">
-                  <div class="card-img"><img src="assets/images/favicon-copy-600x600-36.png" class="card-img-top"></div>
+                  <div class="card-img"><img src="assets/images/DinaSabetta.jpg" class="card-img-top"></div>
                   <div class="card-block">
                     <h4 class="card-title">Dina Sabetta</h4>
                     <h5 class="card-subtitle">Engagement</h5>
@@ -320,7 +320,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-2" style="padding-top: 40px; padding-bottom: 40px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/favicon-copy-600x600-71.png" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/NancyHung.jpg" class="card-img-top"></div>
                     <div class="card-block">
                         <h4 class="card-title">Nancy Hung</h4>
                         <h5 class="card-subtitle">MIT HackHealth</h5>
