--- a/aboutus.html
+++ b/aboutus.html
@@ -182,7 +182,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-2" style="padding-top: 40px; padding-bottom: 0px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/favicon-copy-600x600-59.png" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/MonaLisa.jpg" class="card-img-top"></div>
                     <div class="card-block">
                         <h4 class="card-title">Marina Adrianzen</h4>
                         <h5 class="card-subtitle">Operations</h5>
