--- a/aboutus.html
+++ b/aboutus.html
@@ -295,7 +295,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-2" style="padding-top: 40px; padding-bottom: 40px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/favicon-copy-600x600-12.png" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/JY.jpg" class="card-img-top"></div>
                     <div class="card-block">
                         <h4 class="card-title">Justin Yu</h4>
                         <h5 class="card-subtitle">MIT HackHealth</h5>
