--- a/index.html
+++ b/index.html
@@ -414,6 +414,14 @@
                             <img alt="" src="assets/images/slide6-2000x1250-18.jpg">
                         </div><div class="carousel-item">
                             <img alt="" src="assets/images/slide7-2000x1250-33.jpg">
+                        </div><div class="carousel-item">
+                            <img alt="" src="assets/images/indico.png">
+                        </div>div class="carousel-item">
+                            <img alt="" src="assets/images/blick.png">
+                        </div>div class="carousel-item">
+                            <img alt="" src="assets/images/rb.png">
+                        </div>div class="carousel-item">
+                            <img alt="" src="assets/images/mpja.png">
                         </div>
                     </div>
                     <a class="left carousel-control" role="button" data-slide="prev" href="#lb-gallery3-0">
@@ -439,7 +447,8 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p>Brown Hack Health would also like to acknowledge the generous support of our gold sponsors, 
+            <div class="col-xs-12 lead" style="font-size: 24px; color: black">
+              <p>Brown Hack Health would also like to acknowledge the generous support of our gold sponsors, 
             the Africk Family Foundation, Inc. and The Center for Nutritional Research Charitable Trust.</p></div>
         </div>
     </div>
