--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                         </div>div class="carousel-item">
                             <img alt="" src="assets/images/rb.png">
                         </div>div class="carousel-item">
-                            <img alt="" src="assets/images/mpja.png">
+                            <img alt="" src="assets/images/mja.png">
                         </div>
                     </div>
                     <a class="left carousel-control" role="button" data-slide="prev" href="#lb-gallery3-0">
