--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 lead" style="font-size: 36px; color: blue">
-              <p>Brown Hack Health would also like to acknowledge the generous support of our gold sponsors, 
+              <p>Brown Hack Health would like to acknowledge the generous support of our gold sponsors, 
             the Africk Family Foundation, Inc. and The Center for Nutritional Research Charitable Trust.</p></div>
         </div>
     </div>
