--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead" style="font-size: 36px; color: blue">
+            <div class="col-xs-12 lead" style="font-size: 36px; color: teal">
               <p>Brown Hack Health would like to acknowledge the generous support of our gold sponsors, 
             the Africk Family Foundation, Inc. and The Center for Nutritional Research Charitable Trust.</p></div>
         </div>
