--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                         <h5 class="card-subtitle">9/17</h5>
                         <p class="card-text">8:00AM — Breakfast &amp; Check-In<br>8:25 AM - Hack 101 by MIT Hacking Medicine<br>
 
-                        8:45AM — Problem Pitching<br>9:30AM — Team Formation<br>10:00AM — Hacking Begins<br><br>10:30 AM - Workshop: Persuasive Communication with Prof. Barbara Tannenbaum<br>12:00PM — Lunch<br><em>Hacking Continues</em>
+                        8:45AM — Problem Pitching<br>9:30AM — Team Formation<br>10:00AM — Hacking Begins<br>10:30 AM - Workshop: Persuasive Communication with Prof. Barbara Tannenbaum<br>12:00PM — Lunch<br><em>Hacking Continues</em>
                         <br> 1:00 PM - Introduction to Brown Design Workshop with Prof. Chris Bull<br>5:00PM — Dinner<br>Hacking Continues<br>11:00PM — End of Day 1<br></p>
                         
                     </div>
