--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                     <p class="mbr-section-lead lead"><span style="font-style: normal;">A <strong>new kind of hackathon</strong> that aims to create solutions to medical problems and barriers. This weekend is your opportunity to work with <strong>fellow designers, engineers, developers, physicians, artists, entrepreneurs, mentors, and others</strong> to help develop tools that could change the worlds of medicine and health.</span><br></p>
                     <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="#header3-1"><span class="etl-icon icon-hourglass mbr-iconfont mbr-iconfont-btn"></span>Schedule FRI 09.16 - SUN 09.18.16</a> <a class="btn btn-lg btn-black-outline btn-black" href="https://goo.gl/forms/JglaNTNkqyHataaJ3">Register</a>
                     <a class="btn btn-lg btn-danger" href="/hackathon.pdf">Information for Participants</a>
+                    <a class="btn btn-lg btn-black-outline btn-black" href="http://doodle.com/poll/rerif2sgxkug7brv">Register to Mentor</a>
                     
                     </div>
                 </div>
