--- a/index.html
+++ b/index.html
@@ -544,6 +544,7 @@
                         
                         <p class="card-text">To help participants develop Providence healthcare solutions, we need your involvement!</p>
                         <div class="card-btn"><a href="https://drive.google.com/file/d/0BxYj9V3WO73BcVMyZm5rWjBIbDA/view?usp=sharing" class="btn btn-danger">One-Pager</a></div>
+                        <a class="btn btn-lg btn-black-outline btn-black" href="http://doodle.com/poll/rerif2sgxkug7brv">Register to Mentor</a>
                     </div>
                 </div>
             </div>
