--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                     <h4 class="card-title">Register</h4>
                     
                     <p class="card-text">We've already reached our maximum in participant capacity! But spots open up if a few participants cancel.&nbsp;</p>
-                    <div class="card-btn"><a href="https://goo.gl/forms/JglaNTNkqyHataaJ3" class="btn btn-danger">Register for the Waitlist</a></div>
+                    <div class="card-btn"><a href="https://goo.gl/forms/JglaNTNkqyHataaJ3" class="btn btn-danger">Register</a></div>
                     </div>
                 </div>
             </div>
@@ -544,7 +544,7 @@
                         
                         <p class="card-text">To help participants develop Providence healthcare solutions, we need your involvement!</p>
                         <div class="card-btn"><a href="https://drive.google.com/file/d/0BxYj9V3WO73BcVMyZm5rWjBIbDA/view?usp=sharing" class="btn btn-danger">One-Pager</a></div>
-                        <a class="btn btn-lg btn-black-outline btn-black" href="http://doodle.com/poll/rerif2sgxkug7brv">Register to Mentor</a>
+                        <a class="btn btn-danger" href="http://doodle.com/poll/rerif2sgxkug7brv">Register to Mentor</a>
                     </div>
                 </div>
             </div>
