--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
                     <h1 class="mbr-section-title display-1">Brown Hack Health 2016</h1>
                     <p class="mbr-section-lead lead"><span style="font-style: normal;">A <strong>new kind of hackathon</strong> that aims to create solutions to medical problems and barriers. This weekend is your opportunity to work with <strong>fellow designers, engineers, developers, physicians, artists, entrepreneurs, mentors, and others</strong> to help develop tools that could change the worlds of medicine and health.</span><br></p>
-                    <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="#header3-1"><span class="etl-icon icon-hourglass mbr-iconfont mbr-iconfont-btn"></span>Schedule FRI 09.16 - SUN 09.18.16</a> <a class="btn btn-lg btn-black-outline btn-black" href="https://goo.gl/forms/JglaNTNkqyHataaJ3">Register</a>
+                    <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="#header3-1"><span class="etl-icon icon-hourglass mbr-iconfont mbr-iconfont-btn"></span>Schedule FRI 09.16 - SUN 09.18.16</a> <a class="btn btn-lg btn-black-outline btn-black" href="https://goo.gl/forms/JglaNTNkqyHataaJ3">Register to Participate</a>
                     <a class="btn btn-lg btn-danger" href="/hackathon.pdf">Information for Participants</a>
                     <a class="btn btn-lg btn-black-outline btn-black" href="http://doodle.com/poll/rerif2sgxkug7brv">Register to Mentor</a>
                     
@@ -527,10 +527,10 @@
               <div class="card cart-block">
                   <div class="card-img"><a href="https://mobirise.com" class="etl-icon icon-tools mbr-iconfont mbr-iconfont-features3" style="color: rgb(255, 255, 255);"></a></div>
                   <div class="card-block">
-                    <h4 class="card-title">Register</h4>
+                    <h4 class="card-title">Register to Participate</h4>
                     
                     <p class="card-text">We've already reached our maximum in participant capacity! But spots open up if a few participants cancel.&nbsp;</p>
-                    <div class="card-btn"><a href="https://goo.gl/forms/JglaNTNkqyHataaJ3" class="btn btn-danger">Register</a></div>
+                    <div class="card-btn"><a href="https://goo.gl/forms/JglaNTNkqyHataaJ3" class="btn btn-danger">Register to Participate</a></div>
                     </div>
                 </div>
             </div>
