--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                     <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="#header3-1"><span class="etl-icon icon-hourglass mbr-iconfont mbr-iconfont-btn"></span>Schedule FRI 09.16 - SUN 09.18.16</a> <a class="btn btn-lg btn-black-outline btn-black" href="https://goo.gl/forms/JglaNTNkqyHataaJ3">Register to Participate</a>
                     <a class="btn btn-lg btn-danger" href="/hackathon.pdf">Information for Participants</a>
                     <a class="btn btn-lg btn-black-outline btn-black" href="http://doodle.com/poll/rerif2sgxkug7brv">Register to Mentor</a>
+                    <a class="btn btn-lg btn-black-outline btn-black" href="https://drive.google.com/open?id=0BxYj9V3WO73BODJlYUdTZXh6SlU">Top 20 Problems in Providence</a>
                     
                     </div>
                 </div>
@@ -286,7 +287,7 @@
                         <p class="card-text">8:00AM — Breakfast &amp; Check-In<br>8:25 AM - Hack 101 by MIT Hacking Medicine<br>
 
                         8:45AM — Problem Pitching<br>9:30AM — Team Formation<br>10:00AM — Hacking Begins<br>10:30 AM - Workshop: Persuasive Communication with Prof. Barbara Tannenbaum<br>12:00PM — Lunch<br><em>Hacking Continues</em>
-                        <br> 1:00 PM - Introduction to Brown Design Workshop with Prof. Chris Bull<br>5:00PM — Dinner<br>Hacking Continues<br>11:00PM — End of Day 1<br></p>
+                        <br>5:00PM — Dinner<br>Hacking Continues<br>11:00PM — End of Day 1<br></p>
                         
                     </div>
                 </div>
