--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
                     <a class="btn btn-lg btn-danger" href="/hackathon.pdf">Information for Participants</a>
                     <a class="btn btn-lg btn-black-outline btn-black" href="http://doodle.com/poll/rerif2sgxkug7brv">Register to Mentor</a>
                     <a class="btn btn-lg btn-black-outline btn-black" href="https://drive.google.com/open?id=0BxYj9V3WO73BODJlYUdTZXh6SlU">Top 20 Problems in Providence</a>
-                    
+                    <a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/spreadsheets/d/1NLG8kqNIBscA2uELVyiqVQK0icYox5-WYcKrILvkvYI/edit?usp=sharing">Pitched Problems</a>
+
                     </div>
                 </div>
             </div>
