--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                     <a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/spreadsheets/d/1NLG8kqNIBscA2uELVyiqVQK0icYox5-WYcKrILvkvYI/edit?usp=sharing">Pitched Problems</a>
                     <a class="btn btn-lg btn-black-outline btn-black" href="https://goo.gl/forms/YqmCDwnYODbWGXly2">Register Your Team</a>
                     <a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/a/brown.edu/document/d/1mMVMLgKQi7KwjsqfDEDVXanHwzxQnGXgE_GYtURZhfM/edit?usp=sharing">Sign Up for Pitch Practice</a>
+                    <a class="btn btn-lg btn-black-outline btn-black" href="https://goo.gl/forms/vkH6CgFHcBqrgqfu2">Submit Presentation Draft by 12:00PM</a>
                     
 
 
