--- a/index.html
+++ b/index.html
@@ -73,14 +73,15 @@
 
                     <h1 class="mbr-section-title display-1">Brown Hack Health 2016</h1>
                     <p class="mbr-section-lead lead"><span style="font-style: normal;">A <strong>new kind of hackathon</strong> that aims to create solutions to medical problems and barriers. This weekend is your opportunity to work with <strong>fellow designers, engineers, developers, physicians, artists, entrepreneurs, mentors, and others</strong> to help develop tools that could change the worlds of medicine and health.</span><br></p>
-                    <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="#header3-1"><span class="etl-icon icon-hourglass mbr-iconfont mbr-iconfont-btn"></span>Schedule FRI 09.16 - SUN 09.18.16</a> <a class="btn btn-lg btn-black-outline btn-black" href="https://goo.gl/forms/JglaNTNkqyHataaJ3">Register to Participate</a>
+                    <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="#header3-1"><span class="etl-icon icon-hourglass mbr-iconfont mbr-iconfont-btn"></span>Schedule FRI 09.16 - SUN 09.18.16</a> <a class="btn btn-lg btn-danger" href="https://goo.gl/forms/JglaNTNkqyHataaJ3">Register to Participate</a>
                     <a class="btn btn-lg btn-danger" href="/hackathon.pdf">Information for Participants</a>
-                    <a class="btn btn-lg btn-black-outline btn-black" href="http://doodle.com/poll/rerif2sgxkug7brv">Register to Mentor</a>
+                    <a class="btn btn-lg btn-danger" href="http://doodle.com/poll/rerif2sgxkug7brv">Register to Mentor</a>
                     <a class="btn btn-lg btn-black-outline btn-black" href="https://drive.google.com/open?id=0BxYj9V3WO73BODJlYUdTZXh6SlU">Top 20 Problems in Providence</a>
                     <a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/spreadsheets/d/1NLG8kqNIBscA2uELVyiqVQK0icYox5-WYcKrILvkvYI/edit?usp=sharing">Pitched Problems</a>
                     <a class="btn btn-lg btn-black-outline btn-black" href="https://goo.gl/forms/YqmCDwnYODbWGXly2">Register Your Team</a>
                     <a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/a/brown.edu/document/d/1mMVMLgKQi7KwjsqfDEDVXanHwzxQnGXgE_GYtURZhfM/edit?usp=sharing">Sign Up for Pitch Practice</a>
                     <a class="btn btn-lg btn-black-outline btn-black" href="https://goo.gl/forms/vkH6CgFHcBqrgqfu2">Submit Presentation Draft by 12:00PM</a>
+                    <a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/presentation/d/1yW22fs611OU8Kbbi5Wz5sUkAud5aQ_QwzUSDlC25EyU/edit?usp=sharing">SUNDAY SLIDES</a>
                     
 
 
