--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
     </nav>
 
 </section>
+  
+  [![2016 Recap Video](Screen Shot 2017-02-21 at 10.24.03 AM.png)](https://www.youtube.com/watch?v=nh7DuTpKJ5k&t=9s)
 
 <section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header1-0" style="background-image: url(assets/images/bgsmall-2000x1250-24.jpg);">
 
