--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   
 <section id="Video">  
   
-  [![2016 Recap Video](Screen Shot 2017-02-21 at 10.24.03 AM.png)](https://www.youtube.com/watch?v=nh7DuTpKJ5k&t=9s)
+  [![2016 Recap Video](Screen Shot 2017-02-21 at 10.24.03 AM.png)](https://www.youtube.com/watch?v=nh7DuTpKJ5k)
 </section>   
 
   
