--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
                         <h4 class="card-title">Sponsor</h4>
                         
                         <p class="card-text">Support us on our endeavors, and we'll help spread the word about you!&nbsp;</p>
-                        <div class="card-btn"><a href="https://docs.google.com/document/d/16quAnSDS9o_N7SoCqSQOSAxHxA7v5puTQ_AXOxZ0vr8/edit?usp=sharing" class="btn btn-danger">Sponsorship Deck</a></div>
+                        <div class="card-btn"><a href="https://docs.google.com/document/d/16quAnSDS9o_N7SoCqSQOSAxHxA7v5puTQ_AXOxZ0vr8/edit" class="btn btn-danger">Sponsorship Deck</a></div>
                     </div>
                 </div>
             </div>
