--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 lead" style="font-size: 36px; color: teal">
-              <p style="font-size: 36px; color: teal">Brown Hack Health would like to acknowledge the generous support of our gold sponsors, 
+              <p style="font-size: 36px; color: teal">Brown Hack Health would like to acknowledge the generous support of our 2016 gold sponsors, 
             the Africk Family Foundation, Inc. and The Center for Nutritional Research Charitable Trust.</p></div>
         </div>
     </div>
@@ -543,7 +543,7 @@
                   <div class="card-block">
                     <h4 class="card-title">Register to Participate</h4>
                     
-                    <p class="card-text">We've already reached our maximum in participant capacity! But spots open up if a few participants cancel.&nbsp;</p>
+                    <p class="card-text">Sign up today before spots fill up!.&nbsp;</p>
                     <div class="card-btn"><a href="https://goo.gl/forms/JglaNTNkqyHataaJ3" class="btn btn-danger">Register to Participate</a></div>
                     </div>
                 </div>
@@ -571,7 +571,7 @@
                         <h4 class="card-title">Sponsor</h4>
                         
                         <p class="card-text">Support us on our endeavors, and we'll help spread the word about you!&nbsp;</p>
-                        <div class="card-btn"><a href="https://docs.google.com/document/d/16quAnSDS9o_N7SoCqSQOSAxHxA7v5puTQ_AXOxZ0vr8/edit" class="btn btn-danger">Sponsorship Deck</a></div>
+                        <div class="card-btn"><a href="https://docs.google.com/document/d/1prjRT3aX8krKOr6Ov4V4kCswYd0aXXogUh_jcG1reKo/edit?usp=sharing" class="btn btn-danger">Sponsorship Deck</a></div>
                     </div>
                 </div>
             </div>
