--- a/aboutus.html
+++ b/aboutus.html
@@ -85,8 +85,8 @@
               <div class="card cart-block">
                   <div class="card-img"><img src="assets/images/012-600x600-47.jpg" class="card-img-top"></div>
                   <div class="card-block">
-                    <h4 class="card-title">Elaina Wang</h4>
-                    <h5 class="card-subtitle">Co-president, Founding</h5>
+                    <h4 class="card-title">Elizabeth Carlson</h4>
+                    <h5 class="card-subtitle">Co-president</h5>
                     
                     
                     </div>
