--- a/aboutus.html
+++ b/aboutus.html
@@ -83,7 +83,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-2" style="padding-top: 80px; padding-bottom: 0px;">
             <div class="container">
               <div class="card cart-block">
-                  <div class="card-img"><img src="assets/images/012-600x600-47.jpg" class="card-img-top"></div>
+                  <div class="card-img"><img src="assets/images/Elizabeth Carlson.jpg" class="card-img-top"></div>
                   <div class="card-block">
                     <h4 class="card-title">Elizabeth Carlson</h4>
                     <h5 class="card-subtitle">Co-president</h5>
