--- a/aboutus.html
+++ b/aboutus.html
@@ -96,10 +96,10 @@
         <div class="mbr-cards-col col-xs-12 col-lg-2" style="padding-top: 80px; padding-bottom: 0px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/blank-600x600-56.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/EmilyYamron.jpg" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">Alex Kaye</h4>
-                        <h5 class="card-subtitle">Co-president, Founding</h5>
+                        <h4 class="card-title">Emily Yamron</h4>
+                        <h5 class="card-subtitle">Co-president</h5>
                         
                         
                     </div>
