--- a/aboutus.html
+++ b/aboutus.html
@@ -122,7 +122,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-2" style="padding-top: 80px; padding-bottom: 0px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/Megha.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/Megha2.png" class="card-img-top"></div>
                     <div class="card-block">
                         <h4 class="card-title">Megha Gangadhar, ’19</h4>
                         <h5 class="card-subtitle">Logistics Chair</h5>
