--- a/aboutus.html
+++ b/aboutus.html
@@ -109,7 +109,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-2" style="padding-top: 80px; padding-bottom: 0px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/Spenser.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/Spenser2.jpg" class="card-img-top"></div>
                     <div class="card-block">
                         <h4 class="card-title">Spenser Anderson, ’18, MPH ’19</h4>
                         <h5 class="card-subtitle">Marketing and Outreach Chair</h5>
