--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
-                <h3 class="mbr-section-title display-2">Local Problems, Clever Solutions</h3>
+                <h3 class="mbr-section-title display-2">National Problems, Clever Solutions</h3>
                 <div class="lead"><p>"Hackathon" is a "hack" + "marathon" and not the nefarious "hacking" seen in Mr. Robot. Rather "to hack" in the old Silicon Valley term means to "to create."</p></div>
                 
             </div>
