--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h3 class="mbr-section-title display-2"><span style="font-weight: normal;">Keynote Speaker 2017</span>&nbsp;<span style="color: inherit; font-size: 3rem; line-height: 1.1;">RAJIV KUMAR '05 MD'11</span></h3>
+                <h3 class="mbr-section-title display-2"><span style="font-weight: normal;">Keynote Speaker 2016</span>&nbsp;<span style="color: inherit; font-size: 3rem; line-height: 1.1;">John Sculley III '61</span></h3>
                 
             </div>
         </div>
@@ -116,7 +116,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p>Rajiv Kumar, Brown alum '05 MD'11, co-founder and CEO of ShapeUp, now <a href="https://www.virginpulse.com">Virgin Pulse</a>, (pictured center) will be attending Brown Hack Health 2017 as the keynote speaker. His involvement in technological and now healthcare innovation, especially in leveraging social media to make employees healthier, will provide great insight into tackling healthcare issues presented at the hackathon. Dr. Kumar is currently the Chief Medical Officer at Virgin Pulse and the President of the Virgin Pulse Institute.</p></div>
+            <div class="col-xs-12 lead"><p>John Sculley III, Brown alum ‘61, former CEO of Apple and former President of PepsiCo, (pictured center) will be attending Brown Hack Health 2016 as the keynote speaker. His involvement in technological and now healthcare innovation, especially in telemedicine, will provide great insight into tackling healthcare issues presented at the hackathon. Some of his work in healthcare technology currently include co-founding Misfit Wearables and serving as vice-chairman of MDLive.</p></div>
         </div>
     </div>
 
