--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
 
               <div class="mbr-table-cell col-md-5 text-xs-center text-md-left">
-                  <h3 class="mbr-section-title display-2"><span style="font-weight: normal;">"We are entering a new era of </span>disruptive innovation<span style="font-weight: normal;">, especially in healthcare and wellness services, where </span>consumers will take charge of their own health.<span style="font-weight: normal;">" —JS</span></h3>
+                  <h3 class="mbr-section-title display-2"><span style="font-weight: normal;">"There has never been a better time to be an innovator </span>in the health care space. Technology is powering massive disruption in an antiquated industry <span style="font-weight: normal;">, and this represents an opportunity for bold and creative people </span> to make positive change for billions of people around the world.<span style="font-weight: normal;">" —RK</span></h3>
                   
 
                   
