--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div class="mbr-table-md-up">
 
               <div class="mbr-table-cell mbr-right-padding-md-up mbr-valign-top col-md-7">
-                  <div class="mbr-figure"><img src="assets/images/jc-1400x918-0.jpg"></div>
+                  <div class="mbr-figure"><img src="assets/RajivKumar"></div>
               </div>
 
               
@@ -156,7 +156,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p>Image credit: flickr, CC 2.0</p></div>
+            <div class="col-xs-12 lead"><p>Image credit: Rajiv Kumar</p></div>
         </div>
     </div>
 
