--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
 
               <div class="mbr-table-cell col-md-5 text-xs-center text-md-left">
-                  <h3 class="mbr-section-title display-2"><span style="font-weight: normal;">"There has never been a better time to be an innovator in the health care</span> space. Technology is powering massive disruption in an<span style="font-weight: normal;"> antiquated industry, and this represents an opportunity for bold and creative people to make positive </span>change for billions of people around the world.<span style="font-weight: normal;">" —RK</span></h3>
+                  <h3 class="mbr-section-title display-2"><span style="font-weight: normal;">"There has never been a better time to be an innovator in the health care</span> space. Technology is powering massive disruption in an<span style="font-weight: normal;"> antiquated industry, and this represents an opportunity for bold and creative </span>people to make positive change for billions of people around the world.<span style="font-weight: normal;">" —RK</span></h3>
                   
 
                   
