--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                     <div class="card-block">
                         <h4 class="card-title">Friday Warm-Up<br>Sponsored by the Brown Center for Biomedical Engineering</h4>
                         <h5 class="card-subtitle">9/15</h5>
-                        <p class="card-text">5:30PM — Check-In &amp; Reception w/ Refreshments<br>6:30PM — Hackathon Description<br>6:45 - Message from Sponsor<br>7:00PM — Keynote Speaker: Dr. Rajiv Kumar<br>8:00PM — Networking Night<br><br>* Schedule subject to change<br><br><br></p>
+                        <p class="card-text">5:30PM — Check-In &amp; Reception w/ Refreshments<br>6:30PM — Hackathon Description and Message from Sponsor<br>7:00PM — Keynote Speaker: Dr. Rajiv Kumar<br>8:00PM — Networking Night<br><br>* Schedule subject to change<br><br><br></p>
                         
                     </div>
                 </div>
