--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/presentation/d/1jiARQaaYd13VPoo04Kbr-sLy-p1fFhkpVM1jFEwEF0Q/edit#slide=id.g254da0057a_0_18">Hacking 101</a>
                     <a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/spreadsheets/d/1NLG8kqNIBscA2uELVyiqVQK0icYox5-WYcKrILvkvYI/edit?usp=sharing">Pitched Problems</a>
                     <a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/forms/d/e/1FAIpQLSeda5Worz0VMFs4B61f-CHln2uw4gkqeUxtYUqhMXgVk3P5Rg/viewform?usp=sf_link">Register Your Team</a>
-                    <a class="btn btn-lg btn-black-outline btn-black" href="">Sign Up for Pitch Practice</a>
+                    <a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/spreadsheets/d/1P_ipUP2QkE8_fS1i7hZX2RMJjJh7m_KdNK5iT-5igfI/edit?usp=sharing">List of Teams</a>
                     <a class="btn btn-lg btn-black-outline btn-black" href="https://goo.gl/forms/sfmnTkbPrOm98UA53">Submit Presentation Draft by 12:00PM</a>
                     <a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/presentation/d/1yW22fs611OU8Kbbi5Wz5sUkAud5aQ_QwzUSDlC25EyU/edit?usp=sharing">SUNDAY SLIDES</a>
                     
