--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                     <div class="card-block">
                         <h4 class="card-title">Sunday Home Stretch</h4>
                         <h5 class="card-subtitle">9/17</h5>
-                        <p class="card-text">8:30AM — Breakfast<br><em>Hacking Continues</em><br>12:30PM — Lunch<br>Presentations Due (Link on Website)<br>Hacking Continues<br>2:00PM — Pitch Presentations<br>3:30PM — Judging<br>4:00PM — Awards</p>
+                        <p class="card-text">8:30AM — Breakfast<br><em>Hacking Continues</em><br>12:15PM — Lunch<br>12:30PM - Presentations Due (Link on Website)<br>Hacking Continues<br>2:00PM — Pitch Presentations<br>3:30PM — Judging<br>4:00PM — Awards</p>
                         
                     </div>
                 </div>
