--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                     <a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/spreadsheets/d/1NLG8kqNIBscA2uELVyiqVQK0icYox5-WYcKrILvkvYI/edit?usp=sharing">Pitched Problems</a>
                     <a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/forms/d/e/1FAIpQLSeda5Worz0VMFs4B61f-CHln2uw4gkqeUxtYUqhMXgVk3P5Rg/viewform?usp=sf_link">Register Your Team</a>
                     <a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/spreadsheets/d/1P_ipUP2QkE8_fS1i7hZX2RMJjJh7m_KdNK5iT-5igfI/edit?usp=sharing">List of Teams</a>
-                    <a class="btn btn-lg btn-black-outline btn-black" href="https://goo.gl/forms/sfmnTkbPrOm98UA53">Submit Presentation Draft by 12:00PM</a>
-                    <a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/presentation/d/1yW22fs611OU8Kbbi5Wz5sUkAud5aQ_QwzUSDlC25EyU/edit?usp=sharing">SUNDAY SLIDES</a>
+                    <a class="btn btn-lg btn-black-outline btn-black" href="https://goo.gl/forms/sfmnTkbPrOm98UA53">Submit Presentation Draft by 12:30PM</a>
+                    <a class="btn btn-lg btn-black-outline btn-black" href="https://goo.gl/forms/Velj8pOZGq05s5z32">FEEDBACK FORM</a>
                     
 
 
@@ -313,7 +313,7 @@
                     <div class="card-block">
                         <h4 class="card-title">Sunday Home Stretch</h4>
                         <h5 class="card-subtitle">9/17</h5>
-                        <p class="card-text">8:30AM — Breakfast<br><em>Hacking Continues</em><br>12:00PM - Draft Presentations Due (Link on Website)<br>12:15PM — Lunch<br>Hacking Continues<br>2:00PM — Pitch Presentations<br>3:30PM — Judging<br>4:00PM — Awards</p>
+                        <p class="card-text">8:30AM — Breakfast<br><em>Hacking Continues</em><br>12:15PM — Lunch<br>12:30PM - Draft Presentations Due (Link on Website)<br>Hacking Continues<br>2:00PM — Pitch Presentations<br>3:30PM — Judging<br>4:00PM — Awards</p>
                         
                     </div>
                 </div>
