--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
-                <h3 class="mbr-section-title display-2">Health disparities</h3>
-                <div class="lead"><p> in Providence and across the United States are measured by analysis of treatment protocols and outcomes by race, income, gender, and other factors, and the information shows a stark contrast between the best treated and worst treated groups.</p><p><span style="font-size: 1.07rem; line-height: 1.5;">In 24h of developing fast prototypes for healthcare issues, we can make strides towards eliminating disparities in our local community and other communities nationwide.</span><br></p></div>
+                <h3 class="mbr-section-title display-2">Emergency care</h3>
+                <div class="lead"><p> is a broad field. As you hack your solutions, consider a wide definition of the theme: community tools and trainings and disaster preparedness and response are as much a part of emergencies as medical care in an ER. </p><p><span style="font-size: 1.07rem; line-height: 1.5;">In 24h of developing fast prototypes for healthcare issues, we can make strides towards eliminating disparities in our local community and other communities nationwide.</span><br></p></div>
                 
             </div>
         </div>
