--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h3 class="mbr-section-title display-2"><span style="font-weight: normal;">Keynote Speaker 2017</span>&nbsp;<span style="color: inherit; font-size: 3rem; line-height: 1.1;">Rajiv Kumar '05 MD'11</span></h3>
+                <h3 class="mbr-section-title display-2"><span style="font-weight: normal;">Keynote Speaker 2018</span>&nbsp;<span style="color: inherit; font-size: 3rem; line-height: 1.1;">Geoff Capraro, MD, MPH</span></h3>
                 
             </div>
         </div>
