--- a/index.html
+++ b/index.html
@@ -231,10 +231,10 @@
 
 
               <div class="mbr-table-cell col-md-5 text-xs-center text-md-left">
-                  <h3 class="mbr-section-title display-2">Location: <br>Warren Alpert Medical School of Brown University</h3>
+                  <h3 class="mbr-section-title display-2">Location: <br>Brown University Main Campus</h3>
                   <div class="lead">
 
-                    <p>Alpert Medical School provides access to large, modern spaces in which allow for intense collaborations with a diverse array of passionate healthcare experts &amp; students. <span style="font-size: 1.07rem; line-height: 1.5;">Its location near the Providence healthcare community, including hospitals in Lifespan, Care New England, and Providence Veterans Affairs Medical Center, allows for participants to engage in discussion identifying important healthcare needs in Providence.</span><br></p>
+                    <p>Brown University's campus, located on the idyllic College Hill, presents diverse spaces which allow for intense collaborations with a diverse array of passionate healthcare experts &amp; students. <span style="font-size: 1.07rem; line-height: 1.5;">Its location near the Providence healthcare community, including hospitals in Lifespan, Care New England, and Providence Veterans Affairs Medical Center, allows for participants to engage in discussion identifying important healthcare needs in Providence.</span><br></p>
 
                   </div>
 
@@ -285,7 +285,7 @@
                     <div class="card-block">
                         <h4 class="card-title">Friday Warm-Up<br>Sponsored by the Brown Center for Biomedical Engineering</h4>
                         <h5 class="card-subtitle">9/14</h5>
-                        <p class="card-text">5:30PM — Check-In &amp; Reception w/ Refreshments<br>6:30PM — Hackathon Description and Message from Sponsor<br>7:00PM — Keynote Speaker: Dr. Rajiv Kumar<br>8:00PM — Networking Night<br><br>* Schedule subject to change<br><br><br></p>
+                        <p class="card-text">5:30PM — Check-In &amp; Reception w/ Refreshments<br>6:30PM — Hackathon Description and Message from Sponsor<br>7:00PM — Keynote Speaker: Dr. Geoffrey Capraro<br>8:00PM — Networking Night<br><br>* Schedule subject to change<br><br><br></p>
                         
                     </div>
                 </div>
@@ -301,7 +301,7 @@
                         <p class="card-text">8:00AM — Breakfast &amp; Check-In<br>8:25 AM - Hack 101<br>
 
                         8:45AM — Problem Pitching<br>9:30AM — Team Formation<br>10:00AM — Hacking Begins<br>12:00PM — Lunch<br>1:00PM - Hacking Continues
-                        <br>6:00PM — Dinner - Sponsored by Pizza Pie-er http://www.pizzapie-er.com/<br>7:00PM - Hacking Continues<br>11:00PM — End of Day 1<br></p>
+                        <br>6:00PM — Dinner <br>7:00PM - Hacking Continues<br>11:00PM — End of Day 1<br></p>
                         
                     </div>
                 </div>
