--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
                     <h4 class="card-title">Register to Participate</h4>
                     
                     <p class="card-text">Sign up today before spots fill up!.&nbsp;</p>
-                    <div class="card-btn"><a href="https://goo.gl/forms/JglaNTNkqyHataaJ3" class="btn btn-danger">Register to Participate</a></div>
+                    <div class="card-btn"><a href="https://goo.gl/forms/z75wxjXrNJldKwOw1" class="btn btn-danger">Register to Participate</a></div>
                     </div>
                 </div>
             </div>
@@ -558,7 +558,7 @@
                         
                         <p class="card-text">To help participants develop healthcare solutions, we need your involvement!</p>
                         <div class="card-btn"><a href="https://drive.google.com/file/d/0BxYj9V3WO73BcVMyZm5rWjBIbDA/view?usp=sharing" class="btn btn-danger">One-Pager</a></div>
-                        <a class="btn btn-danger" href="https://docs.google.com/a/brown.edu/forms/d/e/1FAIpQLSceo3lpXVyPLV0aOyAYLMiwlZPpk7XnztsXc_uCFO4QDe7qGQ/viewform">Register to Mentor</a>
+                        <a class="btn btn-danger" href="https://docs.google.com/forms/d/e/1FAIpQLSfcI_yAlER4_ca2EFoygHzD8lnzGcmokufOF9criL8BTQof0A/viewform?usp=sf_link">Register to Mentor</a>
                     </div>
                 </div>
             </div>
