--- a/index.html
+++ b/index.html
@@ -590,10 +590,10 @@
                 <div><img src="assets/images/logo-blue-128x77-12.png"></div>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p><strong>Address</strong><br>The Warren Alpert Medical School <br>of Brown University<br>222 Richmond Street<br>Providence RI, 02912<br></p>
+                <p><strong>Address</strong>Friedman Hall<br>Brown University<br>Providence RI, 02912<br></p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p><strong>Contacts</strong><br>Brown Hack Health 2017<br>Email: team@brownhackhealth.org<br></p>
+                <p><strong>Contacts</strong><br>Brown Hack Health 2018<br>Email: team@brownhackhealth.org<br></p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
                 <p></p><p><strong>Links</strong><br>
