--- a/index.html
+++ b/index.html
@@ -283,9 +283,9 @@
                 <div class="card cart-block">
                     <div class="card-img iconbox"><a href="https://mobirise.com" class="etl-icon icon-wine mbr-iconfont mbr-iconfont-features4" style="color: black;"></a></div>
                     <div class="card-block">
-                        <h4 class="card-title">Friday Warm-Up<br>Sponsored by the Brown Center for Biomedical Engineering</h4>
+                        <h4 class="card-title">Friday Warm-Up<br>Featuring the Charles O. Cooke M.D. Distinguished Visiting Lectureship</h4>
                         <h5 class="card-subtitle">9/14</h5>
-                        <p class="card-text">5:30PM — Check-In &amp; Reception w/ Refreshments<br>6:30PM — Hackathon Description and Message from Sponsor<br>7:00PM — Keynote Speaker: Dr. Geoffrey Capraro<br>8:00PM — Networking Night<br><br>* Schedule subject to change<br><br><br></p>
+                        <p class="card-text">5:30PM — Check-In &amp; Reception w/ Refreshments<br>6:30PM — Hackathon Description and Message about the Cooke Lectureship<br>7:00PM — Keynote Address: The Charles O. Cooke M.D. Distinguished Visiting Lectureship delivered by Dr. Geoffrey Capraro<br>8:00PM — Networking Night<br><br>* Schedule subject to change<br><br><br></p>
                         
                     </div>
                 </div>
