--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		<a class="btn btn-lg btn-black-outline btn-black" href="https://forms.gle/yQBK1vZsx58SubTz5"> Team Sign Up </a>
 		<a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/presentation/d/1S3m6EKISFH3MZQWGR_H0YuJFksf8OEXA7DRRQwkjt-c/edit?usp=sharing"> Hacking 101 </a>
 		<a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/document/d/1JwxnCAc0z5TPdy1OPODJxWyasqiREQeqA31lyk368Ac/edit?usp=sharing"> Judging Info </a>
-                <!-- <a class="btn btn-lg btn-black-outline btn-black" href="https://goo.gl/forms/HDOgYEcS4FRmbxmr1">FEEDBACK FORM</a> -->
+                <a class="btn btn-lg btn-black-outline btn-black" href="https://goo.gl/forms/HDOgYEcS4FRmbxmr1">FEEDBACK FORM</a>
 
 
                     </div>
